WIP: remove points from Instruction